# DeepMeshNet-v1

./: .gitignore  README.md  check.py  pyproject.toml  requirements.txt
experiments/infrastructure/: smoke_test.py
src/geometry/: backend.py  cad_loader.py  cad_model.py  measurements.py  surface_classifier.py  topology.py  validator.py
src/graph/: edge_features.py  graph.py  graph_builder.py  graph_statistics.py  graph_tensor.py  graph_validator.py  graph_visualizer.py  pyg_converter.py  tensor_converter.py
src/knowledge/: complexity.py  density_labels.py  feature_extractor.py  feature_vector.py  rules.py
src/learning/: checkpoint.py  dataloader.py  dataset.py  dataset_split.py  evaluator.py  graph_sample.py  metrics.py  model_registry.py  predictor.py  torch_dataset.py  (+1 more)
tests/: cait_cad_loader_pending.py  test_backend.py  test_base_model.py  test_cad_model.py  test_checkpoint.py  test_complexity.py  test_config.py  test_dataloader.py  test_dataset.py  test_dataset_split.py  test_density_labels.py  test_edge_features.py  test_feature_extractor.py  test_feature_vector.py  test_gat.py  test_gcn.py  test_gin.py  test_gine.py  test_graph.py  test_graph_builder.py  test_graph_sample.py  test_graph_statistics.py  test_graph_tensor.py  test_graph_validator.py  test_graph_visualizer.py  test_graphsage.py  test_measurements.py  test_metrics.py  test_model_registry.py  test_paths.py  test_predictor.py  test_pyg_converter.py  test_rules.py  test_surface_classifier.py  test_tensor_converter.py  test_topology.py  test_torch_dataset.py  test_trainer.py  test_validator.py
(+11 files in other folders)
